Update README and fix get_caught_fish method

--- a/main.ipynb
+++ b/main.ipynb
@@ -442,13 +442,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_caught_fish(fish_list):\n",
-    "    with open(\"data/caught.txt\", \"r\") as file:\n",
-    "        caught_items = {line.strip() for line in file}\n",
+    "    with open(\"data/caught.txt\", \"r\", encoding=\"utf-8\") as file:\n",
+    "        caught_items = {line.strip().replace('_', ' ') for line in file}\n",
     "\n",
     "    caught_fish = [fish for fish in fish_list if fish in caught_items]\n",
     "    \n",
@@ -457,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,9 +469,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "    "
-   ]
+   "source": []
   }
  ],
  "metadata": {
