Fixed importing fish with differnet names than in the spreadsheet

--- a/main.ipynb
+++ b/main.ipynb
@@ -433,35 +433,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_fishes = df[\"Name\"].dropna().unique().tolist()"
+    "all_fishes = df[\"Name\"].dropna().unique().tolist()\n",
+    "renamed_fish = {\"pop eyed goldfish\": \"pop-eyed goldfish\",\n",
+    "                \"soft shelled turtle\": \"soft-shelled turtle\",\n",
+    "                \"napoleonfish\": \"Napoleonfish\",\n",
+    "                \"mahi mahi\": \"mahi-mahi\"\n",
+    "                }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_caught_fish(fish_list):\n",
     "    with open(\"data/caught.txt\", \"r\", encoding=\"utf-8\") as file:\n",
-    "        caught_items = {line.strip().replace('_', ' ') for line in file}\n",
+    "        caught_items = set()\n",
+    "        for line in file:\n",
+    "            fish_name = line.strip().replace('_', ' ')\n",
+    "            if fish_name in renamed_fish:\n",
+    "                fish_name = renamed_fish[fish_name]\n",
+    "            caught_items.add(fish_name)\n",
     "\n",
     "    caught_fish = [fish for fish in fish_list if fish in caught_items]\n",
-    "    \n",
-    "    return caught_fish\n"
+    "\n",
+    "    return caught_fish"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "caught_fish = get_caught_fish(all_fishes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"pop-eyed goldfish\" in caught_fish"
    ]
   },
   {
