--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "4      All day      All day          NaN  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,13 +194,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "SH_df:\n"
      ]
     },
@@ -348,7 +349,7 @@
        "4      All day      All day      All day  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,11 +366,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_spawning_calendar(dataframe, title, filename):\n",
+    "def plot_spawning_calendar(dataframe: pd.DataFrame, title: str, filename: str):\n",
     "    plt.figure(figsize=(12, len(dataframe) * 0.5))\n",
     "\n",
     "    # Convert to 1s and NaNs (1 means spawning, NaN means no spawn)\n",
@@ -393,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -433,12 +434,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_fishes = df[\"Name\"].dropna().unique().tolist()\n",
-    "renamed_fish = {\"pop eyed goldfish\": \"pop-eyed goldfish\",\n",
+    "all_fishes: list[str] = list(df[\"Name\"].dropna().unique())\n",
+    "renamed_fish: dict[str, str] = {\"pop eyed goldfish\": \"pop-eyed goldfish\",\n",
     "                \"soft shelled turtle\": \"soft-shelled turtle\",\n",
     "                \"napoleonfish\": \"Napoleonfish\",\n",
     "                \"mahi mahi\": \"mahi-mahi\"\n",
@@ -447,17 +448,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_caught_fish(fish_list):\n",
+    "def get_caught_fish(fish_list: list[str]) -> list[str]:\n",
     "    with open(\"data/caught.txt\", \"r\", encoding=\"utf-8\") as file:\n",
     "        caught_items = set()\n",
+    "        \n",
     "        for line in file:\n",
     "            fish_name = line.strip().replace('_', ' ')\n",
+    "            \n",
     "            if fish_name in renamed_fish:\n",
     "                fish_name = renamed_fish[fish_name]\n",
+    "            \n",
     "            caught_items.add(fish_name)\n",
     "\n",
     "    caught_fish = [fish for fish in fish_list if fish in caught_items]\n",
@@ -467,31 +471,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [],
    "source": [
     "caught_fish = get_caught_fish(all_fishes)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"pop-eyed goldfish\" in caught_fish"
    ]
   },
   {
