Moved arg for get_caught_fish and added some documentation

--- a/main.ipynb
+++ b/main.ipynb
@@ -434,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,11 +448,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_caught_fish(fish_list: list[str]) -> list[str]:\n",
+    "def get_caught_fish() -> list[str]:\n",
+    "    \"\"\"Gets the list of caught fish from the caught.txt file.\n",
+    "\n",
+    "    Returns:\n",
+    "        list[str]: A list of the caught fish.\n",
+    "    \"\"\"\n",
     "    with open(\"data/caught.txt\", \"r\", encoding=\"utf-8\") as file:\n",
     "        caught_items = set()\n",
     "        \n",
@@ -464,14 +469,14 @@
     "            \n",
     "            caught_items.add(fish_name)\n",
     "\n",
-    "    caught_fish = [fish for fish in fish_list if fish in caught_items]\n",
+    "    caught_fish = [fish for fish in all_fishes if fish in caught_items]\n",
     "\n",
     "    return caught_fish"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
