Added more documentation

--- a/main.ipynb
+++ b/main.ipynb
@@ -366,11 +366,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_spawning_calendar(dataframe: pd.DataFrame, title: str, filename: str):\n",
+    "def plot_spawning_calendar(dataframe: pd.DataFrame, title: str\n",
+    "                           , filename: str) -> None:\n",
+    "    \"\"\"Creates a plot for the fish in a calendar style and saves it as image.\n",
+    "\n",
+    "    Args:\n",
+    "        dataframe (pd.DataFrame): The dataframe with the data for the plot.\n",
+    "        title (str): The title of the plot.\n",
+    "        filename (str): The filename of the saved image.\n",
+    "    \"\"\"\n",
+    "    \n",
     "    plt.figure(figsize=(12, len(dataframe) * 0.5))\n",
     "\n",
     "    # Convert to 1s and NaNs (1 means spawning, NaN means no spawn)\n",
