--- a/main.ipynb
+++ b/main.ipynb
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -395,7 +395,7 @@
     "    plt.title(title)\n",
     "    plt.xticks(rotation=45)\n",
     "    \n",
-    "    plt.savefig(\"images/\" + filename, bbox_inches=\"tight\", dpi=300)\n",
+    "    plt.savefig(\"static/images/\" + filename, bbox_inches=\"tight\", dpi=300)\n",
     "    plt.show()\n",
     "    \n",
     "    plt.close()\n"
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
